update from home

--- a/notebook/initial notebook.ipynb
+++ b/notebook/initial notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4023,7 +4023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4289,7 +4289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4324,7 +4324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4333,16 +4333,6 @@
     "\n",
     "X = X.drop(['cat'],axis=1)\n",
     "X_submit = X_submit.drop(['cat'],axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feats = ['FamilySize','Age_median']\n",
-    "X_df = ftr.load_datasets(feats)"
    ]
   },
   {
@@ -4430,7 +4420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4819,7 +4809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -4842,7 +4832,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.utils import np_utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_train_df = pd.DataFrame(Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_train_ar = np_utils.to_categorical(Y_train_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       ...,\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_train_ar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4850,114 +4900,114 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "712/712 [==============================] - 1s 874us/step - loss: 0.5180 - mean_absolute_error: 0.4806 - acc: 0.6067\n",
+      "712/712 [==============================] - 6s 8ms/step - loss: 0.6650 - acc: 0.6334\n",
       "Epoch 2/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.2462 - mean_absolute_error: 0.4375 - acc: 0.6334\n",
+      "712/712 [==============================] - 0s 200us/step - loss: 0.6284 - acc: 0.6742\n",
       "Epoch 3/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.2289 - mean_absolute_error: 0.4171 - acc: 0.6376\n",
+      "712/712 [==============================] - 0s 218us/step - loss: 0.6311 - acc: 0.6545\n",
       "Epoch 4/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.2153 - mean_absolute_error: 0.4104 - acc: 0.6489\n",
+      "712/712 [==============================] - 0s 183us/step - loss: 0.6231 - acc: 0.6517\n",
       "Epoch 5/50\n",
-      "712/712 [==============================] - 0s 54us/step - loss: 0.2278 - mean_absolute_error: 0.4275 - acc: 0.6643\n",
+      "712/712 [==============================] - 0s 185us/step - loss: 0.6043 - acc: 0.6742\n",
       "Epoch 6/50\n",
-      "712/712 [==============================] - 0s 54us/step - loss: 0.2102 - mean_absolute_error: 0.4170 - acc: 0.6475\n",
+      "712/712 [==============================] - 0s 209us/step - loss: 0.6178 - acc: 0.6615\n",
       "Epoch 7/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.2157 - mean_absolute_error: 0.4153 - acc: 0.6685\n",
+      "712/712 [==============================] - 0s 187us/step - loss: 0.5869 - acc: 0.6868\n",
       "Epoch 8/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.2232 - mean_absolute_error: 0.4222 - acc: 0.6657\n",
+      "712/712 [==============================] - 0s 189us/step - loss: 0.5853 - acc: 0.6952\n",
       "Epoch 9/50\n",
-      "712/712 [==============================] - 0s 57us/step - loss: 0.2148 - mean_absolute_error: 0.4135 - acc: 0.6615\n",
+      "712/712 [==============================] - 0s 324us/step - loss: 0.5727 - acc: 0.7093\n",
       "Epoch 10/50\n",
-      "712/712 [==============================] - 0s 54us/step - loss: 0.2105 - mean_absolute_error: 0.4126 - acc: 0.6587\n",
+      "712/712 [==============================] - 0s 196us/step - loss: 0.5496 - acc: 0.7275\n",
       "Epoch 11/50\n",
-      "712/712 [==============================] - 0s 57us/step - loss: 0.2037 - mean_absolute_error: 0.4095 - acc: 0.6770\n",
+      "712/712 [==============================] - 0s 274us/step - loss: 0.5950 - acc: 0.7107\n",
       "Epoch 12/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1879 - mean_absolute_error: 0.3831 - acc: 0.7177\n",
+      "712/712 [==============================] - 0s 239us/step - loss: 0.5590 - acc: 0.7275\n",
       "Epoch 13/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1777 - mean_absolute_error: 0.3671 - acc: 0.7331\n",
+      "712/712 [==============================] - 0s 179us/step - loss: 0.5275 - acc: 0.7486\n",
       "Epoch 14/50\n",
-      "712/712 [==============================] - 0s 57us/step - loss: 0.1639 - mean_absolute_error: 0.3339 - acc: 0.7795\n",
+      "712/712 [==============================] - 0s 257us/step - loss: 0.5161 - acc: 0.7584\n",
       "Epoch 15/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1690 - mean_absolute_error: 0.3352 - acc: 0.7626\n",
+      "712/712 [==============================] - 0s 342us/step - loss: 0.6287 - acc: 0.6924\n",
       "Epoch 16/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1809 - mean_absolute_error: 0.3538 - acc: 0.7472\n",
+      "712/712 [==============================] - 0s 292us/step - loss: 0.5753 - acc: 0.6952\n",
       "Epoch 17/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1622 - mean_absolute_error: 0.3273 - acc: 0.7711\n",
+      "712/712 [==============================] - 0s 321us/step - loss: 0.5378 - acc: 0.7346\n",
       "Epoch 18/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1652 - mean_absolute_error: 0.3285 - acc: 0.7711\n",
+      "712/712 [==============================] - 0s 410us/step - loss: 0.5063 - acc: 0.7654\n",
       "Epoch 19/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1658 - mean_absolute_error: 0.3495 - acc: 0.7725\n",
+      "712/712 [==============================] - 0s 185us/step - loss: 0.4998 - acc: 0.7823\n",
       "Epoch 20/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1509 - mean_absolute_error: 0.2907 - acc: 0.7992\n",
+      "712/712 [==============================] - 0s 208us/step - loss: 0.4678 - acc: 0.7851\n",
       "Epoch 21/50\n",
-      "712/712 [==============================] - 0s 54us/step - loss: 0.1599 - mean_absolute_error: 0.3226 - acc: 0.7879\n",
+      "712/712 [==============================] - 0s 223us/step - loss: 0.4794 - acc: 0.7921\n",
       "Epoch 22/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1585 - mean_absolute_error: 0.3236 - acc: 0.7753\n",
+      "712/712 [==============================] - 0s 215us/step - loss: 0.5139 - acc: 0.7739\n",
       "Epoch 23/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1725 - mean_absolute_error: 0.3321 - acc: 0.7640\n",
+      "712/712 [==============================] - 0s 276us/step - loss: 0.5138 - acc: 0.7697\n",
       "Epoch 24/50\n",
-      "712/712 [==============================] - 0s 53us/step - loss: 0.1531 - mean_absolute_error: 0.3137 - acc: 0.7893\n",
+      "712/712 [==============================] - 0s 197us/step - loss: 0.4974 - acc: 0.7711\n",
       "Epoch 25/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1717 - mean_absolute_error: 0.3326 - acc: 0.7669\n",
+      "712/712 [==============================] - 0s 276us/step - loss: 0.4631 - acc: 0.7978\n",
       "Epoch 26/50\n",
-      "712/712 [==============================] - 0s 54us/step - loss: 0.1497 - mean_absolute_error: 0.3030 - acc: 0.8048\n",
+      "712/712 [==============================] - 0s 370us/step - loss: 0.4455 - acc: 0.8048\n",
       "Epoch 27/50\n",
-      "712/712 [==============================] - 0s 58us/step - loss: 0.1497 - mean_absolute_error: 0.2979 - acc: 0.7992\n",
+      "712/712 [==============================] - 0s 412us/step - loss: 0.4901 - acc: 0.7837\n",
       "Epoch 28/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1494 - mean_absolute_error: 0.2986 - acc: 0.7935\n",
+      "712/712 [==============================] - 0s 308us/step - loss: 0.4902 - acc: 0.7893\n",
       "Epoch 29/50\n",
-      "712/712 [==============================] - 0s 54us/step - loss: 0.1504 - mean_absolute_error: 0.3053 - acc: 0.7907\n",
+      "712/712 [==============================] - 0s 189us/step - loss: 0.4571 - acc: 0.8020\n",
       "Epoch 30/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1523 - mean_absolute_error: 0.3088 - acc: 0.7823\n",
+      "712/712 [==============================] - 0s 237us/step - loss: 0.4584 - acc: 0.7907\n",
       "Epoch 31/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1426 - mean_absolute_error: 0.2920 - acc: 0.8076\n",
+      "712/712 [==============================] - 0s 185us/step - loss: 0.4433 - acc: 0.8174\n",
       "Epoch 32/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1412 - mean_absolute_error: 0.2945 - acc: 0.8188\n",
+      "712/712 [==============================] - 0s 237us/step - loss: 0.4343 - acc: 0.8188\n",
       "Epoch 33/50\n",
-      "712/712 [==============================] - 0s 58us/step - loss: 0.1427 - mean_absolute_error: 0.2762 - acc: 0.8076\n",
+      "712/712 [==============================] - 0s 216us/step - loss: 0.4597 - acc: 0.8034\n",
       "Epoch 34/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1380 - mean_absolute_error: 0.2896 - acc: 0.8090\n",
+      "712/712 [==============================] - 0s 192us/step - loss: 0.4377 - acc: 0.8188\n",
       "Epoch 35/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1386 - mean_absolute_error: 0.2896 - acc: 0.8034\n",
+      "712/712 [==============================] - 0s 227us/step - loss: 0.4368 - acc: 0.8216\n",
       "Epoch 36/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1401 - mean_absolute_error: 0.2774 - acc: 0.8048\n",
+      "712/712 [==============================] - 0s 188us/step - loss: 0.4837 - acc: 0.7893\n",
       "Epoch 37/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1472 - mean_absolute_error: 0.3022 - acc: 0.8048\n",
+      "712/712 [==============================] - 0s 248us/step - loss: 0.4425 - acc: 0.8090\n",
       "Epoch 38/50\n",
-      "712/712 [==============================] - 0s 58us/step - loss: 0.1341 - mean_absolute_error: 0.2724 - acc: 0.8244\n",
+      "712/712 [==============================] - 0s 458us/step - loss: 0.4892 - acc: 0.7837\n",
       "Epoch 39/50\n",
-      "712/712 [==============================] - 0s 57us/step - loss: 0.1369 - mean_absolute_error: 0.2811 - acc: 0.8090\n",
+      "712/712 [==============================] - 0s 339us/step - loss: 0.4797 - acc: 0.7879\n",
       "Epoch 40/50\n",
-      "712/712 [==============================] - 0s 57us/step - loss: 0.1318 - mean_absolute_error: 0.2769 - acc: 0.8230\n",
+      "712/712 [==============================] - 0s 308us/step - loss: 0.4402 - acc: 0.8076\n",
       "Epoch 41/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1473 - mean_absolute_error: 0.2946 - acc: 0.7865\n",
+      "712/712 [==============================] - 0s 188us/step - loss: 0.4224 - acc: 0.8216\n",
       "Epoch 42/50\n",
-      "712/712 [==============================] - 0s 57us/step - loss: 0.1357 - mean_absolute_error: 0.2755 - acc: 0.8104\n",
+      "712/712 [==============================] - 0s 224us/step - loss: 0.4181 - acc: 0.8258\n",
       "Epoch 43/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1310 - mean_absolute_error: 0.2661 - acc: 0.8244\n",
+      "712/712 [==============================] - 0s 209us/step - loss: 0.4292 - acc: 0.8244\n",
       "Epoch 44/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1662 - mean_absolute_error: 0.3143 - acc: 0.7879\n",
+      "712/712 [==============================] - 0s 225us/step - loss: 0.4561 - acc: 0.7907\n",
       "Epoch 45/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1423 - mean_absolute_error: 0.2892 - acc: 0.8188\n",
+      "712/712 [==============================] - 0s 182us/step - loss: 0.4255 - acc: 0.8258\n",
       "Epoch 46/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1322 - mean_absolute_error: 0.2736 - acc: 0.8188\n",
+      "712/712 [==============================] - 0s 203us/step - loss: 0.4076 - acc: 0.8216\n",
       "Epoch 47/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1294 - mean_absolute_error: 0.2734 - acc: 0.8244\n",
+      "712/712 [==============================] - 0s 458us/step - loss: 0.4211 - acc: 0.8230\n",
       "Epoch 48/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1419 - mean_absolute_error: 0.2830 - acc: 0.7963\n",
+      "712/712 [==============================] - 0s 353us/step - loss: 0.4086 - acc: 0.8258\n",
       "Epoch 49/50\n",
-      "712/712 [==============================] - 0s 56us/step - loss: 0.1400 - mean_absolute_error: 0.2798 - acc: 0.8076\n",
+      "712/712 [==============================] - 0s 253us/step - loss: 0.4129 - acc: 0.8174\n",
       "Epoch 50/50\n",
-      "712/712 [==============================] - 0s 55us/step - loss: 0.1355 - mean_absolute_error: 0.2750 - acc: 0.8090\n"
+      "712/712 [==============================] - 0s 201us/step - loss: 0.4250 - acc: 0.8244\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f87ea5b3208>"
+       "<keras.callbacks.History at 0x1a362fc7b8>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4971,32 +5021,13 @@
     "    model.add(Dense(units=64))\n",
     "    model.add(Activation('relu'))\n",
     "\n",
-    "model.add(Dense(units=1))\n",
-    "model.add(Activation('linear'))\n",
+    "model.add(Dense(units=2))\n",
+    "model.add(Activation('softmax'))\n",
     "\n",
     "# model.compile(loss='mean_squared_error', optimizer='rmsprop')\n",
-    "model.compile(loss='mean_squared_error',metrics=['mae', 'acc'], optimizer='adam')\n",
-    "model.fit(X_train, Y_train, epochs=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7988826815642458"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracy_score(Y_test, model.predict_classes(X_test))"
+    "adam = Adam(lr=1e-3)\n",
+    "model.compile(loss='categorical_crossentropy' , metrics=[\"accuracy\"], optimizer=adam)\n",
+    "model.fit(X_train, Y_train_ar, epochs=50,batch_size = 50)\n"
    ]
   },
   {
@@ -5100,7 +5131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
